--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "blogPost ",
   "main": "blogPostRouter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "start": "node server.js"
   },
   "repository": {
