--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "blog-post",
   "version": "1.0.0",
-  "description": "blogPost ",
+  "description": "blog post",
   "main": "blogPostRouter.js",
+  "dependencies": {
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "mocha": "^5.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "start": "node server.js"
   },
   "repository": {
@@ -16,9 +24,5 @@
   "bugs": {
     "url": "https://github.com/Taradacktl/blog-post/issues"
   },
-  "homepage": "https://github.com/Taradacktl/blog-post#readme",
-  "dependencies": {
-    "express": "^4.16.3",
-    "uuid": "^3.2.1"
-  }
+  "homepage": "https://github.com/Taradacktl/blog-post#readme"
 }
